metadata/force-app/main/default/objects/Account/fields/Current_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Current_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Vendor</label>
    <referenceTo>Competitors__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>