metadata/force-app/main/default/objects/Account/fields/Current_Vendor_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Vendor_Contract_Start_Date__c</fullName>
    <description>The date when the contract with the current vendor starts based on closed lost date + 3 months</description>
    <label>Start Date Current Vendor Contract</label>
    <type>Date</type>
</CustomField>