metadata/force-app/main/default/objects/Account/fields/Customer_Advisory_Board_Member__c.field-meta.xml
<CustomField>
    <fullName>Customer_Advisory_Board_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BO-1889: Used to identify the Customer Advisory Board customers. Will be used in Product Board,Catalyst and Thoughtspot.</description>
    <label>Customer Advisory Board Member</label>
    <type>Checkbox</type>
</CustomField>