metadata/force-app/main/default/objects/Account/fields/Customer_Folder__c.field-meta.xml
<CustomField>
    <fullName>Customer_Folder__c</fullName>
    <description>BODEV-3303 New Field on Account to track &quot;Customer Folder&quot; - Google Drive URL</description>
    <label>Customer Folder</label>
    <type>Url</type>
</CustomField>