metadata/force-app/main/default/objects/Account/fields/Customer_Health__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health__c</fullName>
    <description>wd field
Assessment of customer&apos;s overall health.</description>
    <label>Customer Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Churned</fullName>
                <color>#A845DC</color>
                <label>Customer Churned</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#78C953</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
                <label>Yellow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>