metadata/force-app/main/default/objects/Account/fields/Customer_Health_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health_Notes__c</fullName>
    <label>Customer Health Notes</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>