metadata/force-app/main/default/objects/Account/fields/Customer_Journey_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey_Date__c</fullName>
    <label>Target Launch Date</label>
    <type>Date</type>
</CustomField>