metadata/force-app/main/default/objects/Account/fields/Customer_Notice_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notice_Address__c</fullName>
    <description>Postal address for customer notices.</description>
    <inlineHelpText>Postal address for customer notices.</inlineHelpText>
    <label>Customer Notice Post Address</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>