metadata/force-app/main/default/objects/Account/fields/Customer_Notice_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notice_Email_Address__c</fullName>
    <description>Email address for customer notices.</description>
    <inlineHelpText>Email address for customer notices.</inlineHelpText>
    <label>Customer Notice Email Address</label>
    <type>Email</type>
</CustomField>