metadata/force-app/main/default/objects/Account/fields/Customer_Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Customer_Slack_Channel__c</fullName>
    <description>Stores the link of the slack channel used for SAMs/CSMs/CDRs communications about the customer.</description>
    <label>Customer Slack Channel</label>
    <type>Url</type>
</CustomField>