metadata/force-app/main/default/objects/Account/fields/Customer_Stage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Stage__c</fullName>
    <label>Customer Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>new_customer</fullName>
                <label>New Customer</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Adopting</fullName>
            </value>
            <value>
                <fullName>Auto-Pilot</fullName>
                <label>Optimizing</label>
            </value>
            <value>
                <fullName>on_hold</fullName>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Cancelling</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Transferring to Bynder</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>