metadata/force-app/main/default/objects/Account/fields/Customer_Succes_notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Succes_notes__c</fullName>
    <inlineHelpText>To be filled out by the Customer Success Manager</inlineHelpText>
    <label>Customer Success notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>