metadata/force-app/main/default/objects/Account/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier_1</fullName>
                <label>Tier 1</label>
            </value>
            <value>
                <fullName>Tier_2</fullName>
                <label>Tier 2</label>
            </value>
            <value>
                <fullName>Tier_3</fullName>
                <label>Tier 3</label>
            </value>
            <value>
                <fullName>Tier_4</fullName>
                <label>Tier 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>