metadata/force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Used to determine if customer has a DAM or Standalone Content Workflow product</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAM Customer</fullName>
            </value>
            <value>
                <fullName>Standalone Content Workflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>