metadata/force-app/main/default/objects/Account/fields/Database__c.field-meta.xml
<CustomField>
    <fullName>Database__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Database in use by customer.</description>
    <inlineHelpText>Database in use by customer:
EU-Local
US-Local
Global</inlineHelpText>
    <label>Database</label>
    <referenceTo>Database__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>