metadata/force-app/main/default/objects/Account/fields/Database_location__c.field-meta.xml
<CustomField>
    <fullName>Database_location__c</fullName>
    <label>Database location (actual)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>EU-only</fullName>
            </value>
            <value>
                <fullName>US-only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>