metadata/force-app/main/default/objects/Account/fields/Database_location_as_per_contract__c.field-meta.xml
<CustomField>
    <fullName>Database_location_as_per_contract__c</fullName>
    <inlineHelpText>Is the database locally stored or globally?</inlineHelpText>
    <label>Data Hosting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EU</fullName>
                <label>EU-only</label>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>US-only</fullName>
            </value>
            <value>
                <fullName>Not defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>