metadata/force-app/main/default/objects/Account/fields/Database_SpotDraft__c.field-meta.xml
<CustomField>
    <fullName>Database_SpotDraft__c</fullName>
    <description>Created this formula field for SpotDraft purpose</description>
    <formula>Database__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpotDraft Database</label>
    <type>Text</type>
</CustomField>