metadata/force-app/main/default/objects/Account/fields/Databaser_location_comment_field__c.field-meta.xml
<CustomField>
    <fullName>Databaser_location_comment_field__c</fullName>
    <inlineHelpText>Only to be filled out by Legal</inlineHelpText>
    <label>Database location - comment field</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>