metadata/force-app/main/default/objects/Account/fields/Date_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Agreement_Signed__c</fullName>
    <label>Date Agreement Signed</label>
    <type>Date</type>
</CustomField>