metadata/force-app/main/default/objects/Account/fields/Date_NDA_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_NDA_Signed__c</fullName>
    <label>Date NDA Signed</label>
    <type>Date</type>
</CustomField>