metadata/force-app/main/default/objects/Account/fields/Dates_Used_as_Reference__c.field-meta.xml
<CustomField>
    <fullName>Dates_Used_as_Reference__c</fullName>
    <description>List of clients that this client has been a reference for and date?</description>
    <inlineHelpText>List of clients that this client has been a reference for and date?</inlineHelpText>
    <label>Dates Used as Reference</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>