metadata/force-app/main/default/objects/Account/fields/days_customer_wisse__c.field-meta.xml
<CustomField>
    <fullName>days_customer_wisse__c</fullName>
    <formula>Today()-Original_Contract_Start_Date__c</formula>
    <label>days customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>