metadata/force-app/main/default/objects/Account/fields/Days_until_Contract_Ends__c.field-meta.xml
<CustomField>
    <fullName>Days_until_Contract_Ends__c</fullName>
    <formula>Current_Contract_End_Date_New__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until Contract Ends</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>