metadata/force-app/main/default/objects/Account/fields/Deployment_Department__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Department__c</fullName>
    <description>Used to store the department of the deployment.</description>
    <inlineHelpText>Which departments within the organisation are using or will use Bynder?</inlineHelpText>
    <label>Deployment Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All departments</fullName>
            </value>
            <value>
                <fullName>Art &amp; Design</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>