metadata/force-app/main/default/objects/Account/fields/Design_Collaboration_Mark_Up_Tools__c.field-meta.xml
<CustomField>
    <fullName>Design_Collaboration_Mark_Up_Tools__c</fullName>
    <label>Design / Collaboration / Mark-Up Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ConceptShare</fullName>
            </value>
            <value>
                <fullName>ProofHQ</fullName>
            </value>
            <value>
                <fullName>Percolate</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
            <value>
                <fullName>Adobe InDesign</fullName>
            </value>
            <value>
                <fullName>Adobe Illustrator (AI)</fullName>
            </value>
            <value>
                <fullName>Adobe Photoshop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>