metadata/force-app/main/default/objects/Account/fields/Domain_Aliases__c.field-meta.xml
<CustomField>
    <fullName>Domain_Aliases__c</fullName>
    <description>Domain Aliases for Zendesk.</description>
    <inlineHelpText>Maps Domain Aliases to Domain names in Zendesk.</inlineHelpText>
    <label>Domain Aliases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>