metadata/force-app/main/default/objects/Account/fields/Downtime_seconds_remaining_this_month__c.field-meta.xml
<CustomField>
    <fullName>Downtime_seconds_remaining_this_month__c</fullName>
    <description>Downtime seconds remaining until 99.9% SLA is breached.</description>
    <formula>Database__r.Downtime_seconds_remaining_this_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Downtime seconds remaining until 99.9% SLA is breached.</inlineHelpText>
    <label>Downtime seconds remaining this month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>