metadata/force-app/main/default/objects/Account/fields/Downtime_seconds_this_month__c.field-meta.xml
<CustomField>
    <fullName>Downtime_seconds_this_month__c</fullName>
    <description>Downtime of the customers database.</description>
    <formula>Database__r.Downtime_this_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Downtime of the customers database.</inlineHelpText>
    <label>Downtime seconds this month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>