metadata/force-app/main/default/objects/Account/fields/DPA__c.field-meta.xml
<CustomField>
    <fullName>DPA__c</fullName>
    <description>Legal Field - Data processing agreement</description>
    <inlineHelpText>Legal Field - Data processing agreement</inlineHelpText>
    <label>DPA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bynder DPA</fullName>
            </value>
            <value>
                <fullName>Bynder DPA Negotiated</fullName>
            </value>
            <value>
                <fullName>Customer DPA</fullName>
            </value>
            <value>
                <fullName>Check back later - set reminder</fullName>
            </value>
            <value>
                <fullName>v.2 / Online DPA</fullName>
            </value>
            <value>
                <fullName>v.2 / Negotiated</fullName>
            </value>
            <value>
                <fullName>v.3 / Online DPA</fullName>
            </value>
            <value>
                <fullName>v.3 / Negotiated</fullName>
            </value>
            <value>
                <fullName>CW Standalone DPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>