metadata/force-app/main/default/objects/Account/fields/DPA_Comments__c.field-meta.xml
<CustomField>
    <fullName>DPA_Comments__c</fullName>
    <description>Comments in relation to the DPA.</description>
    <inlineHelpText>Comments in relation to the DPA.</inlineHelpText>
    <label>DPA Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>