metadata/force-app/main/default/objects/Account/fields/DPA_notification_email__c.field-meta.xml
<CustomField>
    <fullName>DPA_notification_email__c</fullName>
    <description>Customer contact for notices under the DPA.</description>
    <inlineHelpText>Customer contact for notices under the DPA.</inlineHelpText>
    <label>DPA notification email</label>
    <type>Email</type>
</CustomField>