metadata/force-app/main/default/objects/Account/fields/DU_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DU_DUNS_Number__c</fullName>
    <description>The Domestic Ultimate is the highest entity within an organization and is identified by a nine-digit Domestic Ultimate D-U-N-S Number. All companies that are part of the same corporate structure as the Domestic Ultimate are identified by the same Domestic Ultimate D-U-N-S Number.</description>
    <inlineHelpText>The Domestic Ultimate is the highest entity within an organization and is identified by a nine-digit Domestic Ultimate D-U-N-S Number. All companies that are part of the same corporate structure as the Domestic Ultimate are identified by the same Domestic Ultimate D-U-N-S Number.</inlineHelpText>
    <label>DU DUNS Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>