metadata/force-app/main/default/objects/Account/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <description>The Dun &amp; Bradstreet D-U-N-S® (Data Universal Numbering System) Number is a unique nine-digit identifier for businesses that is associated with a business’s Live Business Identity which may help evaluate potential partners</description>
    <inlineHelpText>The Dun &amp; Bradstreet D-U-N-S® (Data Universal Numbering System) Number is a unique nine-digit identifier for businesses that is associated with a business’s Live Business Identity which may help evaluate potential partners</inlineHelpText>
    <label>DUNS Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>