metadata/force-app/main/default/objects/Account/fields/Dynamic_Templates__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Templates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dynamic Templates</label>
    <type>Checkbox</type>
</CustomField>