metadata/force-app/main/default/objects/Account/fields/Dynamic_Templates_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Templates_End_Date__c</fullName>
    <label>Dynamic Templates End Date</label>
    <type>Date</type>
</CustomField>