metadata/force-app/main/default/objects/Account/fields/Dynamic_Templates_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Templates_Plan_Type__c</fullName>
    <label>Dynamic Templates Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>Workfront - Unlimited</fullName>
            </value>
            <value>
                <fullName>Workfront - Starter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>