metadata/force-app/main/default/objects/Account/fields/Employees_Range__c.field-meta.xml
<CustomField>
    <fullName>Employees_Range__c</fullName>
    <description>wd field</description>
    <formula>IF(NumberOfEmployees = 0, &quot;&quot;,
   IF(NumberOfEmployees &lt;= 100, &quot;Tier 1:  0-100&quot;, 
     IF(NumberOfEmployees &lt;= 1000, &quot;Tier 2:  101-1000&quot;, 
        IF(NumberOfEmployees &lt;= 5000, &quot;Tier 3:  1001-5000&quot;,&quot;Tier 4:  5000+&quot;
        )
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employees Range (Deprecated)</label>
    <type>Text</type>
</CustomField>