metadata/force-app/main/default/objects/Account/fields/End_of_term_notice_requirement__c.field-meta.xml
<CustomField>
    <fullName>End_of_term_notice_requirement__c</fullName>
    <description>Bynder obligation to notify ahead of contract expiration OR upcoming notice of non-renewal deadline.</description>
    <inlineHelpText>Bynder obligation to notify ahead of contract expiration OR upcoming notice of non-renewal deadline.</inlineHelpText>
    <label>Bynder notification of expiration period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>