metadata/force-app/main/default/objects/Account/fields/Escrow_beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Escrow_beneficiary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escrow beneficiary</label>
    <type>Checkbox</type>
</CustomField>