metadata/force-app/main/default/objects/Account/fields/Ex_Customer_Churn_Date__c.field-meta.xml
<CustomField>
    <fullName>Ex_Customer_Churn_Date__c</fullName>
    <description>Used to store the contract end date of close lost renewal opportunity.</description>
    <label>Ex-Customer Churn Date</label>
    <type>Date</type>
</CustomField>