metadata/force-app/main/default/objects/Account/fields/Ex_customer_of_new_business_renewals__c.field-meta.xml
<CustomField>
    <fullName>Ex_customer_of_new_business_renewals__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of new business/renewal opportunities on the account. Used by process to set the contract name.</description>
    <label>Ex customer # of new business/renewals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>