metadata/force-app/main/default/objects/Account/fields/Fixed_Indexation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Indexation_Rate__c</fullName>
    <description>If indexation is fixed, what percentage of indexation is applied?</description>
    <inlineHelpText>If indexation is fixed, what percentage of indexation is applied?</inlineHelpText>
    <label>Fixed Indexation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>