metadata/force-app/main/default/objects/Account/fields/Focus_Partner__c.field-meta.xml
<CustomField>
    <fullName>Focus_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-4335 DoA Refinement - Build: Partner Attributes</description>
    <inlineHelpText>Focus partners are identified by Partner Managers.</inlineHelpText>
    <label>Focus Partner</label>
    <type>Checkbox</type>
</CustomField>