metadata/force-app/main/default/objects/Account/fields/Fortune_500_Listed__c.field-meta.xml
<CustomField>
    <fullName>Fortune_500_Listed__c</fullName>
    <description>BODEV - 4405 F500 FIELD ON ACCOUNT
As part of account restructuring and territory mapping, we need to assign F500 customers to our top csm and ae.</description>
    <label>Fortune 500 Listed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>