metadata/force-app/main/default/objects/Account/fields/GB_storage__c.field-meta.xml
<CustomField>
    <fullName>GB_storage__c</fullName>
    <description>GBs of storage from active opportunities.</description>
    <inlineHelpText>GBs of storage from active opportunities.</inlineHelpText>
    <label># of Storage (GB&apos;s)</label>
    <summarizedField>Opportunity.GB_storage__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Contract_IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>