metadata/force-app/main/default/objects/Account/fields/Gold_Certified__c.field-meta.xml
<CustomField>
    <fullName>Gold_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Partner Gold Certified?</description>
    <label>Gold Partner?</label>
    <type>Checkbox</type>
</CustomField>