metadata/force-app/main/default/objects/Account/fields/Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law__c</fullName>
    <label>Governing Law</label>
    <length>255</length>
    <type>Text</type>
</CustomField>