metadata/force-app/main/default/objects/Account/fields/Growth_Score__c.field-meta.xml
<CustomField>
    <fullName>Growth_Score__c</fullName>
    <description>Growth score is set by a flow

BODEV-3916</description>
    <label>Growth Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>