metadata/force-app/main/default/objects/Account/fields/Growth_Tier__c.field-meta.xml
<CustomField>
    <fullName>Growth_Tier__c</fullName>
    <description>Growth tier is set by flow - BODEV-3916</description>
    <label>Growth Tier</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>