metadata/force-app/main/default/objects/Account/fields/GU_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>GU_DUNS_Number__c</fullName>
    <description>The Global Ultimate is the highest entity within an organization and is identified by a nine-digit Global Ultimate D-U-N-S Number. All companies that are part of the same corporate structure as the Global Ultimate are identified by the same Global Ultimate D-U-N-S Number.</description>
    <inlineHelpText>The Global Ultimate is the highest entity within an organization and is identified by a nine-digit Global Ultimate D-U-N-S Number. All companies that are part of the same corporate structure as the Global Ultimate are identified by the same Global Ultimate D-U-N-S Number.</inlineHelpText>
    <label>GU DUNS Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>