metadata/force-app/main/default/objects/Account/fields/Has_Advanced_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Has_Advanced_Analytics__c</fullName>
    <description>BODEV-625: Indicates how many Advanced Analytic products this customer has on its active opportunities (DLRS)</description>
    <inlineHelpText>Indicates how many Advanced Analytic products this customer has on its active opportunities</inlineHelpText>
    <label>Has Advanced Analytics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>