metadata/force-app/main/default/objects/Account/fields/Has_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Has_Analytics__c</fullName>
    <description>BODEV-625: Indicates how many Basic Analytic products this customer has on its active opportunities (DLRS)</description>
    <inlineHelpText>Indicates how many Basic Analytic products this customer has on its active opportunities</inlineHelpText>
    <label>Has Basic Analytics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>